--- a/MLCore/MLCore.csproj
+++ b/MLCore/MLCore.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
     <NullableContextOptions>enable</NullableContextOptions>
-    <StartupObject>MLCore.Program</StartupObject>
+    <StartupObject></StartupObject>
     <ApplicationIcon>TextTemplate.ico</ApplicationIcon>
   </PropertyGroup>
 
