--- a/MLCore/MLCore.csproj
+++ b/MLCore/MLCore.csproj
@@ -7,7 +7,7 @@
     <Nullable>enable</Nullable>
     <StartupObject>MLCore.Program</StartupObject>
     <ApplicationIcon>TextTemplate.ico</ApplicationIcon>
-    <Version>1.11.26.1</Version>
+    <Version>1.11.27.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -19,10 +19,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.ML" Version="1.0.0-preview" />
-  </ItemGroup>
 
 </Project>
