--- a/MLCore/MLCore.csproj
+++ b/MLCore/MLCore.csproj
@@ -1,4 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,7 +8,7 @@
     <Nullable>enable</Nullable>
     <StartupObject>MLCore.Program</StartupObject>
     <ApplicationIcon>TextTemplate.ico</ApplicationIcon>
-    <Version>1.15.2.30</Version>
+    <Version>1.15.5.88</Version>
   </PropertyGroup>
     
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
